<resources>
    <!-- API Endpoints -->
    <string name="root_url">http://10.10.9.76:4000</string>
    <string name="login_url">/api/login</string>
    <string name="register_url">/api/register</string>
    <string name="profile_url">/api/profile/</string>
    <string name="customer_image_url">assets/customer/</string>

    <!-- Text -->
    <string name="app_name">Shopdee</string>
    <string name="title_home">หน้าแรก</string>
    <string name="title_cart">ตะกร้า</string>
    <string name="title_history">ประวัติ</string>
    <string name="title_dashboard">รายงาน</string>
    <string name="title_user">บัญชีผู้ใช้</string>

    <string name="privacy_policy">การกดการสมัครสมาชิกถือว่าท่านยอมรับใน <u>นโยบายความเป็นส่วนตัว</u></string>
    <string name="privacy_policy_text">
        <b>1. บทนำ\n\n</b>
        1.1 ขอต้อนรับสู่ Shopee แพลตฟอร์มที่ดำเนินการโดย Shopee Limited, Shopee (Thailand) Company Limited  และบริษัทในกลุ่มและบริษัทในเครือ (เรียกแยกและเรียกรวมกันว่า “Shopee”, “เรา”, “พวกเรา” หรือ “ของเรา”) Shopee มีหน้าที่รับผิดชอบภายใต้กฎหมายและข้อบังคับความเป็นส่วนตัวที่บังคับใช้(“กฎหมายคุ้มครองข้อมูลส่วนบุคคล”) อย่างจริงจัง และยึดมั่นต่อการเคารพสิทธิและให้ความสำคัญเกี่ยวกับความเป็นส่วนตัวของผู้ใช้เว็บไซต์และแอปพลิเคชันบนมือถือ Shopee ทั้งหมด (เรียกรวมกันว่า “แพลตฟอร์ม”) (เราเรียกแพลตฟอร์มและบริการที่เรามอบให้ดังที่ระบุไว้ในแพลตฟอร์มของเราโดยรวมว่า (“บริการ”) และ “ผู้ใช้” หมายถึง ผู้ใช้ที่มีบัญชีซึ่งได้ลงทะเบียนกับเราและใช้แพลตฟอร์ม (เรียกแยกและเรียกรวมกันว่า “ผู้ใช้” “คุณ” หรือ “ของคุณ”) เราตระหนักถึงความสำคัญของข้อมูลส่วนบุคคลที่คุณมอบให้แก่เรา และเชื่อว่าเรามีหน้าที่รับผิดชอบในการจัดการ ปกป้อง และดำเนินการข้อมูลส่วนบุคคลของคุณอย่างเหมาะสม นโยบายความเป็นส่วนตัวนี้ (“นโยบายความเป็นส่วนตัว” หรือ “นโยบาย”) ได้รับการออกแบบมาเพื่อช่วยให้คุณเข้าใจเกี่ยวกับวิธีที่เราเก็บรวบรวม ใช้ เปิดเผย และ/หรือดำเนินการข้อมูลส่วนบุคคลที่คุณมอบให้แก่เราและ/หรือข้อมูลของคุณที่เราครอบครองไม่ว่าจะในปัจจุบันหรืออนาคต รวมทั้งยังเป็นข้อมูลประกอบการตัดสินใจก่อนที่คุณจะให้ข้อมูลส่วนตัวใดๆ แก่เรา โปรดอ่านนโยบายความเป็นส่วนตัวนี้โดยละเอียด หากคุณมีข้อสงสัยเกี่ยวกับข้อมูลเหล่านี้หรือข้อปฏิบัติว่าด้วยความเป็นส่วนตัวของเรา โปรดดูส่วนของหัวข้อ “มีคำถาม ข้อกังวล หรือคำร้องเรียนใช่หรือไม่ โปรดติดต่อเรา” ในตอนท้ายของนโยบายความเป็นส่วนตัวนี้\n\n
        1.2  “ข้อมูลส่วนบุคคล” หมายถึง ข้อมูลเกี่ยวกับบุคคลไม่ว่าจริงหรือเท็จที่สามารถใช้เป็นข้อมูลที่ระบุตัวตนของบุคคลผู้นั้น หรือจากข้อมูลดังกล่าวหรือข้อมูลอื่นๆ ที่องค์กรมีหรืออาจสามารถเข้าถึงได้ ตัวอย่างข้อมูลส่วนบุคคลที่พบบ่อยได้แก่ ชื่อ หมายเลขประจำตัว และข้อมูลการติดต่อ\n\n
        1.3 ในการใช้บริการการลงทะเบียนบัญชีกับเรา เยี่ยมชมแพลตฟอร์ม และ/หรือเข้าถึงบริการ คุณได้รับทราบและตกลงว่าคุณยอมรับข้อปฏิบัติ ข้อกำหนด และ/หรือนโยบายที่กำหนดไว้ในนโยบายความเป็นส่วนตัวนี้ และคุณยินยอมให้เราเก็บรวบรวม ใช้ เปิดเผย และ/หรือดำเนินการข้อมูลส่วนบุคคลของคุณดังที่ระบุไว้ในนโยบายความเป็นส่วนตัวนี้ หากคุณไม่ยินยอมให้เราดำเนินการข้อมูลส่วนบุคคลของคุณดังที่ระบุไว้ในนโยบายความเป็นส่วนตัวนี้ โปรดอย่าใช้บริการหรือเข้าถึงแพลตฟอร์ม หากเราเปลี่ยนแปลงนโยบายความเป็นส่วนตัวของเรา เราจะแจ้งให้คุณทราบซึ่งรวมถึงการโพสต์การเปลี่ยนแปลงดังกล่าวหรือนโยบายความเป็นส่วนตัวที่แก้ไขบนแพลตฟอร์ม เราขอสงวนสิทธิ์ในการแก้ไขนโยบายความเป็นส่วนตัวนี้ในทุกเมื่อโดยภายใต้ขอบเขตสูงสุดที่อนุญาตโดยกฎหมายที่ใช้บังคับในการเข้าใช้บริการหรือแพลตฟอร์มรวมถึงการทำคำสั่งซื้อผลิตภัณฑ์อย่างต่อเนื่องของคุณต่อไปภายหลังการแก้ไขนั้นถือว่าคุณรับทราบและยอมรับการแก้ไขของนโยบายความเป็นส่วนตัวนี้\n\n
        1.4 นโยบายนี้ใช้บังคับร่วมกับการบอกกล่าวข้อสัญญา ข้อตกลงให้ความยินยอมใดๆ ที่เกี่ยวข้องกับการเก็บรวบรวม ใช้ เปิดเผย และ/หรือประมวลผลข้อมูลส่วนบุคคลของคุณโดยเรา โดยนโยบายนี้จะไม่ได้มีผลบังคับเหนือกว่าการบอกกล่าว หรือข้อสัญญาและข้อตกลงใดๆ เว้นแต่เราจะได้กำหนดไว้โดยชัดแจ้งเป็นอย่างอื่น\n\n
        1.5 นโยบายนี้ใช้สำหรับทั้งผู้ซื้อ ผู้ขาย พาร์ทเนอร์ผู้ขับขี่ และร้านค้า ผู้ใช้บริการของเรา เว้นแต่จะได้กำหนดไว้โดยชัดแจ้งเป็นอย่างอื่น\n\n

        <b>2. Shopee จะเก็บรวบรวมข้อมูลส่วนบุคคลเมื่อใด?\n\n</b>
        2.1 เราจะ/อาจเก็บรวบรวมข้อมูลส่วนบุคคลของคุณเมื่อ:\n
        (ก) เมื่อคุณได้เข้าถึงและ/หรือใช้บริการหรือแพลตฟอร์มของเรา หรือลงทะเบียนสมัครบัญชีผู้ใช้กับเรา\n
        (ข) เมื่อคุณส่งแบบฟอร์ม รวมถึงแต่ไม่จำกัดเพียง แบบฟอร์มการสมัครหรือแบบฟอร์มอื่นๆ ที่เกี่ยวข้องกับผลิตภัณฑ์และบริการของเรา ไม่ว่าจะแบบออนไลน์หรือแบบฟอร์มเป็นเอกสาร\n
        (ค) เมื่อคุณทำข้อตกลงใดๆ หรือให้เอกสารหรือข้อมูลอื่นใดที่เกี่ยวข้องกับการติดต่อระหว่างคุณกับเราหรือเมื่อคุณใช้ผลิตภัณฑ์และบริการของเรา\n
        (ง) เมื่อคุณติดต่อกับเรา เช่น ผ่านทางโทรศัพท์ (ซึ่งจะได้รับการบันทึก) จดหมาย แฟกซ์ การประชุมแบบเห็นหน้ากัน แพลตฟอร์มสื่อทางสังคม และอีเมล รวมถึงเมื่อคุณได้ติดต่อกับตัวแทนให้บริการลูกค้า (customer service agents)\n
        (จ) เมื่อคุณใช้บริการทางอิเล็กทรอนิกส์ หรือติดต่อกับเราผ่านแพลตฟอร์มหรือใช้บริการ ซึ่งรวมถึงแต่ไม่จำกัดเพียงการใช้ผ่านคุกกี้ ซึ่งเราอาจปรับใช้เมื่อคุณใช้หรือเข้าถึงแอปพลิเคชันหรือเว็บไซต์\n
        (ฉ) เมื่อคุณได้อนุญาตโดยผ่านอุปกรณ์ของคุณ ให้เปิดเผยข้อมูลใดๆ แก่แอปพลิเคชันหรือแพลตฟอร์มของเรา\n
        (ช) เมื่อคุณเชื่อมโยงบัญชี Shopee กับบัญชีสื่อสังคมออนไลน์ (Social Media Account) หรือบัญชีผู้ใช้งานอื่นของคุณ หรือใช้ฟีเจอร์สื่อสังคมออนไลน์อื่น (Social Media Features) ภายใต้นโยบายการให้บริการของผู้ให้บริการฟีเจอร์นั้นๆ\n
        (ซ) เมื่อคุณดำเนินธุรกรรมผ่านบริการของเรา\n
        (ฌ) เมื่อคุณให้ความคิดเห็นหรือคำร้องเรียนแก่เรา\n
        (ญ) เมื่อคุณลงทะเบียนเข้าร่วมกิจกรรมการแข่งขัน\n
        (ฎ) เมื่อคุณส่งข้อมูลส่วนบุคคลของคุณให้แก่เราด้วยเหตุผลใดก็ตามนโยบายดังกล่าวข้างต้นไม่ได้อ้างไว้โดยละเอียดถี่ถ้วนและเป็นเพียงตัวอย่างทั่วไปเมื่อเราเก็บรวบรวมข้อมูลส่วนบุคคลเกี่ยวกับคุณ\n\n

        2.2 เราอาจเก็บรวบรวมข้อมูลส่วนบุคคลของคุณจากคุณ บริษัทในเครือของเรา บุคคลที่สาม และจากแหล่งอื่นซึ่งรวมถึงแต่ไม่จำกัดเพียง คู่ค้าทางธุรกิจ (เช่น บริษัทผู้ให้บริการขนส่ง หรือผู้ให้บริการรับชำระเงิน) ผู้ให้บริการข้อมูลเครดิตหรือผู้ประเมินเครดิต ผู้ให้บริการด้านการตลาด รายการส่งเสริมการขายร่วมกับพันธมิตร รายการส่งเสริมการขายแบบแนะนำสมาชิก โปรแกรมการเป็นลูกค้าอย่างต่อเนื่อง ผู้ใช้บริการคนอื่น ๆ หรือข้อมูลสาธารณะ หรือข้อมูลจากหน่วยงานราชการ\n\n
        2.3 ในบางกรณี คุณอาจให้ข้อมูลส่วนบุคคลของบุคคลอื่นแก่เรา (เช่น บุคคลในครอบครัวของคุณ เพื่อน หรือบุคคลในรายชื่อติดต่อของคุณ) หากคุณได้ให้ข้อมูลส่วนบุคคลดังกล่าวแก่เรา คุณยืนยันและรับรองว่าคุณได้ขอความยินยอมจากบุคคลดังกล่าวเพื่อการประมวลผลข้อมูลส่วนบุคคลตามนโยบายนี้แล้ว\n
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>