<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="th.ac.rmutto.shopdee.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="th.ac.rmutto.shopdee.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_histry"
        android:name="th.ac.rmutto.shopdee.HistryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_histry" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="th.ac.rmutto.shopdee.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_customer"
        android:name="th.ac.rmutto.shopdee.CustomerFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_customer" />
</navigation>